--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Annoter Miss Oh</title>
+    <title> otra señorita oh </title>
     <link rel="stylesheet" href="Index.css">
     <link rel="stylesheet" href="Dark.css">
     <script src="https://kit.fontawesome.com/03a89292db.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
 
         </div>
 
-        <h1> Annoter Miss Oh</h1>
+        <h1>  Otra Señorita Oh! </h1>
 
 
 
