--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> otra señorita oh </title>
-    <link rel="stylesheet" href="Index.css">
-    <link rel="stylesheet" href="Dark.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dark.css">
     <script src="https://kit.fontawesome.com/03a89292db.js" crossorigin="anonymous"></script>
 </head>
 
@@ -19,7 +19,7 @@
 
         </div>
 
-        <h1>  Otra Señorita Oh! </h1>
+        <h1> Otra Señorita Oh! </h1>
 
 
 
@@ -353,7 +353,7 @@
 
     <!----SCRIPT----->
 
-    <script src="Index.js"> </script>
+    <script src="anoter.js"> </script>
 
 </body>
 
