--- a/Index.html
+++ b/Index.html
@@ -144,8 +144,13 @@
         <div class="episodio-2">
             <h3> Episodio 2</h3>
             <p> ' Un destino basado en una Negligensia ' </p>
-            <iframe allowfullscreen="" class="styles__PlayerIFrame-ypbr7j-12 bRWxZv"
-                src="https://uqload.com/embed-l9i2ez8qfnei.html" width="700px" height="400px"></iframe>
+            <iframe width="700px" height="400px"
+                src="https://static.wetvinfo.com/static/embed/index.html?oversea=1&amp;lang=es&amp;vid=g0035vvyiy9&amp;autoplay=true&amp;full=true&amp;defn=shd&amp;&amp;spsrt=1"
+                frameborder="0" border="0" marginwidth="0" marginheight="0" scrolling="no"
+                allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen"
+                msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen"
+                webkitallowfullscreen="webkitallowfullscreen" security="restricted"
+                sandbox="allow-same-origin allow-forms allow-scripts"></iframe>
 
         </div>
 
